# Qdrant_Learn

./: main.py  pyproject.toml  raft_state.json
Data_ingest_pipeline/: ingest.py
Data_retrieval_pipeline/: retrieval.py
collections/gpt_db/0/: newest_clocks.json  replica_state.json
collections/gpt_db/0/segments/26e7fc3d-8750-42b3-b021-2cf8ff861a52/: mutable_id_tracker.mappings
collections/gpt_db/0/segments/5ce2a0fd-fdf8-4fee-a57c-c3badddb608b/: mutable_id_tracker.mappings
collections/gpt_db/0/segments/6c957f74-4a43-499e-9f81-8d78f5e4f9eb/: mutable_id_tracker.mappings
collections/gpt_db/0/segments/757778b7-6c2f-4f91-ba8a-7da69d4d54e0/: mutable_id_tracker.mappings
collections/gpt_db/0/segments/8d66af98-1742-4200-a820-5cc48612262d/: mutable_id_tracker.mappings
collections/gpt_db/0/segments/92ed0ca7-e40d-4caa-bcde-a3f85ebc071a/: mutable_id_tracker.mappings  mutable_id_tracker.versions
collections/gpt_db/0/segments/bef0503e-8565-47b0-90fd-a55c4cfb0de3/: mutable_id_tracker.mappings
collections/gpt_db/0/segments/c0c5b577-49fa-48b6-8492-027c75adaf84/: mutable_id_tracker.mappings
