[project]
name = "qdrant-learn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.16",
    "langchain-google-genai>=4.2.1",
    "langchain-ollama>=1.0.1",
    "langchain-text-splitters>=1.1.1",
    "load-dotenv>=0.1.0",
    "pypdf>=6.7.4",
    "qdrant-client==1.9.0",
    "sentence-transformers>=5.2.3",
    "torch>=2.10.0",
]
